--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -30,9 +31,10 @@ dependencies:
 
   google_fonts: ^2.1.0
   flutter_svg: ^0.22.0
-  fl_chart: ^0.40.2
-  provider: ^6.0.1
+  fl_chart: ^0.40.6
+  # provider: ^6.0.1
   data_table_2: ^2.0.3
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
